<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/card_list_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rl_banner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/banner_height"
        android:background="@color/actionbar_bg_dark" >

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_theme_dark_selector"
            android:drawableLeft="@drawable/ic_left"
            android:gravity="center"
            android:paddingRight="12dp"
            android:text="@string/add_event"
            android:textColor="@color/actionbar_text_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/banner_ok"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/banner_height"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_theme_dark_selector"
            android:clickable="true"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ok"
            android:textColor="@color/actionbar_text_color"
            android:textSize="18sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_select_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/select_date" />

    <Button
        android:id="@+id/btn_select_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/select_time" />

    <EditText
        android:id="@+id/et_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_common_edittext"
        android:gravity="center_vertical"
        android:hint="@string/hint_add_todo" >
    </EditText>

</LinearLayout>