<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rg_navigate"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/actionbar_bg_dark"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:weightSum="3.6"
        android:layout_width="match_parent"
        android:gravity="center">

        <RadioButton
            android:id="@+id/rb_today_todo"
            style="@style/navigation_bottom_radio"
            android:drawableTop="@drawable/ic_today_todo_o"
            android:text="@string/today_todo" />

        <RadioButton
            android:id="@+id/rb_todo_manage"
            style="@style/navigation_bottom_radio"
            android:drawableTop="@drawable/ic_todo_list_o"
            android:text="@string/todo_manage" />

        <RadioButton
            android:id="@+id/rb_signin_history"
            style="@style/navigation_bottom_radio"
            android:drawableTop="@drawable/ic_sign_history_o"
            android:text="@string/signin_history" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rg_navigate"
        android:layout_alignParentTop="true" />

</RelativeLayout>