<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="16dp" >

    <LinearLayout
        android:id="@+id/contentLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp" >

        <TextView
            android:id="@+id/tv_city_name"
            style="@style/CardTitle"
            android:layout_centerVertical="true" />

        <ImageView
            android:id="@+id/overflow"
            android:layout_width="16dp"
            android:layout_height="32dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selectable_background_cardbank"
            android:contentDescription="@string/overflow"
            android:padding="2dip"
            android:src="@drawable/ic_menu_moreoverflow_normal_holo_light" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="@color/stroke" />

    <RelativeLayout
        android:id="@+id/rl_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:gravity="center_vertical"
        android:padding="4dp" >

        <TextView
            android:id="@+id/tv_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="100dp"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/card_text"
            android:textSize="54sp" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/tv_temperature"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/card_light_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/tv_temperature"
            android:layout_alignParentRight="true"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/card_light_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_uva"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/card_light_text"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/tv_weather_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_loading"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:gravity="center"
        android:text="@string/loading"
        android:textColor="@color/card_text"
        android:textSize="25sp" />

</LinearLayout>